[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dlabrenishaw"
version = "0.1.0"
description = "Modular control system for Raman-fluorescence microscopy"
authors = [{name = "antonyg", email = "antonyg@stanford.edu"}]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
    "requests>=2.26.0",
    "pycromanager>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]
gui = [
    "PyQt6>=6.0.0",
]